kubernetes/apps/default/obsidian/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obsidian
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: obsidian
      app.kubernetes.io/instance: obsidian
      app.kubernetes.io/controller: obsidian
  template:
    metadata:
      labels:
        app.kubernetes.io/name: obsidian
        app.kubernetes.io/instance: obsidian
        app.kubernetes.io/controller: obsidian
    spec:
      securityContext:
        runAsNonRoot: false # LinuxServer images often need root to set up the environment
      containers:
        - name: app
          image: lscr.io/linuxserver/obsidian:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: obsidian
