kubernetes/apps/default/obsidian/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: obsidian
  namespace: default
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: obsidian
    app.kubernetes.io/instance: obsidian
    app.kubernetes.io/controller: obsidian
