kubernetes/apps/default/obsidian/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obsidian
  namespace: default
  annotations:
    gatus.home-operations.com/endpoint: |-
      dns:
        query-name: obsidian.unscfleet.com
        query-type: A
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - obsidian.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: obsidian
          port: 3000
