kubernetes/apps/default/obsidian/app/security.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: obsidian-oidc
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: obsidian
  oidc:
    provider:
      issuer: "https://github.com"
      authorizationEndpoint: "https://github.com/login/oauth/authorize"
      tokenEndpoint: "https://github.com/login/oauth/access_token"
    clientIDRef:
      name: github-fleet-auth-secret
    clientSecret:
      name: github-fleet-auth-secret
    redirectURL: "https://obsidian.unscfleet.com/oauth2/callback"
    logoutPath: "/logout"
